# test-task

./: README.md
task/lame_task/: CMakeLists.txt  convert_to_mp3.cc  convert_to_mp3.h  helpers.cc  helpers.h  main.cc  wav.cc  wav.h
task/lib/: libmp3lame-static.lib  libmpghip-static.lib
